Fix for left aligned icon tiles via Grid CSS

--- a/src/pages/swipe-tabs/swipe-tabs.scss
+++ b/src/pages/swipe-tabs/swipe-tabs.scss
@@ -144,11 +144,16 @@ page-swipe-tabs {
     }
 
     .tile-container {
-        display: flex;
-        flex-flow: row wrap;
-        align-content: center;
-        justify-content: space-between;
-        width: 100%;
+        // display: flex;
+        // flex-flow: row wrap;
+        // align-content: center;
+        // justify-content: space-between;
+
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+        grid-template-rows: auto;
+
+        // width: 100%;
         margin: 0 0 24px 0;
         padding: 12px;
     }
